force-app/main/default/objects/Krow__Project_Resources__c/Krow__Project_Resources__c.object-meta.xml
<CustomObject>
    <label>Project Resource</label>
    <nameField>
        <label>Project Resource Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Project Resources</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>