force-app/main/default/objects/Krow__Project_Resources__c/fields/App_Password__c.field-meta.xml
<CustomField>
    <fullName>App_Password__c</fullName>
    <label>App Password</label>
    <length>30</length>
    <maskChar>asterisk</maskChar>
    <maskType>all</maskType>
    <type>EncryptedText</type>
</CustomField>