force-app/main/default/objects/Krow__Project_Resources__c/fields/Krow__Active__c.field-meta.xml
<CustomField>
    <fullName>Krow__Active__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>