force-app/main/default/objects/Krow__Project_Resources__c/fields/Krow__Exclude_from_Utilization__c.field-meta.xml
<CustomField>
    <fullName>Krow__Exclude_from_Utilization__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Exclude from Utilization</label>
    <type>Checkbox</type>
</CustomField>