force-app/main/default/objects/Krow__Project_Resources__c/fields/Krow__External_ID__c.field-meta.xml
<CustomField>
    <fullName>Krow__External_ID__c</fullName>
    <externalId>true</externalId>
    <label>External ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>