force-app/main/default/objects/Krow__Project_Resources__c/fields/Krow__External_Resource__c.field-meta.xml
<CustomField>
    <fullName>Krow__External_Resource__c</fullName>
    <defaultValue>false</defaultValue>
    <label>External Resource</label>
    <type>Checkbox</type>
</CustomField>