force-app/main/default/objects/Krow__Project_Resources__c/fields/Krow__Intacct_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Krow__Intacct_Contact_Name__c</fullName>
    <description>Contact name of the resource in intacct</description>
    <label>Intacct Contact Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>