force-app/main/default/objects/Krow__Project_Resources__c/fields/Krow__Intacct_Employee_Id__c.field-meta.xml
<CustomField>
    <fullName>Krow__Intacct_Employee_Id__c</fullName>
    <description>Employee id of resource in intacct</description>
    <label>Intacct Employee Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>