force-app/main/default/objects/Krow__Project_Resources__c/fields/Krow__Jira_Email_Id__c.field-meta.xml
<CustomField>
    <fullName>Krow__Jira_Email_Id__c</fullName>
    <label>Depreciated</label>
    <length>255</length>
    <type>Text</type>
</CustomField>