force-app/main/default/objects/Krow__Project_Resources__c/fields/Krow__Jira_Username__c.field-meta.xml
<CustomField>
    <fullName>Krow__Jira_Username__c</fullName>
    <description>A Primary field using for Jira integration (Jira User id)</description>
    <inlineHelpText>A Primary field using for Jira integration (Jira User id)</inlineHelpText>
    <label>Jira User Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>