force-app/main/default/objects/Krow__Project_Resources__c/fields/Krow__Organization__c.field-meta.xml
<CustomField>
    <fullName>Krow__Organization__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Organization</label>
    <referenceTo>Krow__Organization__c</referenceTo>
    <relationshipLabel>Project Resources (Organization)</relationshipLabel>
    <relationshipName>Organization_Resources</relationshipName>
    <type>Lookup</type>
</CustomField>