force-app/main/default/objects/Krow__Project_Resources__c/fields/Krow__Placeholder__c.field-meta.xml
<CustomField>
    <fullName>Krow__Placeholder__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Placeholder</label>
    <type>Checkbox</type>
</CustomField>