force-app/main/default/objects/Krow__Project_Resources__c/fields/Krow__Project_Role__c.field-meta.xml
<CustomField>
    <fullName>Krow__Project_Role__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project Role</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Krow__Krow_Role__c.Krow__Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Krow__Krow_Role__c</referenceTo>
    <relationshipLabel>Project Resources</relationshipLabel>
    <relationshipName>ProjectRoles</relationshipName>
    <type>Lookup</type>
</CustomField>