force-app/main/default/objects/Krow__Project_Resources__c/fields/Krow__Region__c.field-meta.xml
<CustomField>
    <fullName>Krow__Region__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Region</label>
    <referenceTo>Krow__Region__c</referenceTo>
    <relationshipLabel>Project Resources</relationshipLabel>
    <relationshipName>Project_Resources</relationshipName>
    <type>Lookup</type>
</CustomField>