force-app/main/default/objects/Krow__Project_Resources__c/fields/Krow__Slack_Account_Email__c.field-meta.xml
<CustomField>
    <fullName>Krow__Slack_Account_Email__c</fullName>
    <description>Same email as you have created account on slack.</description>
    <label>Slack Account Email</label>
    <type>Email</type>
</CustomField>