force-app/main/default/objects/Krow__Project_Resources__c/fields/Krow__Slack_Member_Id__c.field-meta.xml
<CustomField>
    <fullName>Krow__Slack_Member_Id__c</fullName>
    <description>Stores slack member id for this resource&apos;s User from slack.</description>
    <label>Slack Member Id</label>
    <length>15</length>
    <type>Text</type>
</CustomField>