force-app/main/default/objects/Krow__Project_Resources__c/fields/Krow__Slack_Member_Name__c.field-meta.xml
<CustomField>
    <fullName>Krow__Slack_Member_Name__c</fullName>
    <description>Holding the slack team member name.</description>
    <label>Slack Member Name</label>
    <length>15</length>
    <type>Text</type>
</CustomField>