force-app/main/default/objects/Krow__Project_Resources__c/fields/Krow__Target_Utilization__c.field-meta.xml
<CustomField>
    <fullName>Krow__Target_Utilization__c</fullName>
    <description>% for work schedule hours.</description>
    <label>Deprecated</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>