force-app/main/default/objects/Krow__Project_Resources__c/fields/Krow__Timesheet_User__c.field-meta.xml
<CustomField>
    <fullName>Krow__Timesheet_User__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Timesheet User</label>
    <type>Checkbox</type>
</CustomField>