force-app/main/default/objects/Krow__Project_Resources__c/fields/Krow__Zendesk_Email__c.field-meta.xml
<CustomField>
    <fullName>Krow__Zendesk_Email__c</fullName>
    <label>Zendesk Email</label>
    <type>Email</type>
</CustomField>