force-app/main/default/objects/Krow__Project_Resources__c/fields/Krow__Zendesk_Member_Id__c.field-meta.xml
<CustomField>
    <fullName>Krow__Zendesk_Member_Id__c</fullName>
    <label>Zendesk_Member_Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>