force-app/main/default/objects/Krow__Project_Resources__c/fields/Lead_P_Replacement__c.field-meta.xml
<CustomField>
    <fullName>Lead_P_Replacement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead (P) Replacement</label>
    <referenceTo>Krow__Project_Resources__c</referenceTo>
    <relationshipLabel>Project Resources</relationshipLabel>
    <relationshipName>Lead_Placeholder_Replacements</relationshipName>
    <type>Lookup</type>
</CustomField>