force-app/main/default/objects/Krow__Project_Resources__c/fields/Sub_Contractor_Account__c.field-meta.xml
<CustomField>
    <fullName>Sub_Contractor_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sub Contractor Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Project Resources</relationshipLabel>
    <relationshipName>Project_Resources</relationshipName>
    <type>Lookup</type>
</CustomField>