force-app/main/default/objects/Krow__Project_Resources__c/validationRules/Krow__Cost_Rate_Should_Not_Be_Negative.validationRule-meta.xml
<ValidationRule>
    <fullName>Krow__Cost_Rate_Should_Not_Be_Negative</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT(ISNULL(Krow__Cost_Rate__c)),Krow__Cost_Rate__c &lt; 0)</errorConditionFormula>
    <errorMessage>Cost Rate should not be negative.</errorMessage>
</ValidationRule>