force-app/main/default/objects/Krow__Project_Resources__c/listViews/Active_Resources.listView-meta.xml
<ListView>
    <fullName>Active_Resources</fullName>
    <columns>NAME</columns>
    <columns>Krow__Project_Role__c</columns>
    <columns>Lead_P_Replacement__c</columns>
    <columns>Krow__User__c</columns>
    <columns>Krow__Placeholder__c</columns>
    <columns>Work_Email__c</columns>
    <columns>OBJECT_ID</columns>
    <columns>App_Password__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Krow__Active__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Active Resources</label>
</ListView>