force-app/main/default/objects/Krow__Project_Resources__c/listViews/Krow__All.listView-meta.xml
<ListView>
    <fullName>Krow__All</fullName>
    <columns>NAME</columns>
    <columns>Krow__Project_Role__c</columns>
    <columns>Krow__Cost_Rate__c</columns>
    <columns>Krow__User__c</columns>
    <columns>Krow__Active__c</columns>
    <columns>Krow__Placeholder__c</columns>
    <columns>Krow__Timesheet_User__c</columns>
    <columns>Krow__Vendor__c</columns>
    <columns>Work_Email__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>